Basic Html and CSS structure list

--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -11,5 +11,174 @@
     <script src="https://kit.fontawesome.com/c697d3b3f5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <main>
+        <div class="lista">
+            <ul class="lista__container">
+                <li class="lista__container__noticia">
+                    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="noticia"
+                        class="lista__container__noticia__imagem">
+
+                    <div class="lista__container__noticia__elementos">
+                        <div class="lista__container__noticia__elementos--titulo">
+                            <h2 class="lista__container__noticia__titulo">Titulo</h2>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart hide"></i>
+                        </div>
+
+                        <span>10/03/2022</span>
+                        <p>Resumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo
+                            da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da
+                            notíciaResumo da notícia</p>
+                        <div class="lista__container__noticia__elementos--categoria">
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 1</span>
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 2</span>
+                        </div>
+                    </div>
+
+
+
+
+                </li>
+                <li class="lista__container__noticia">
+                    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="noticia"
+                        class="lista__container__noticia__imagem">
+
+                    <div class="lista__container__noticia__elementos">
+                        <div class="lista__container__noticia__elementos--titulo">
+                            <h2 class="lista__container__noticia__titulo">Titulo</h2>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart hide"></i>
+                        </div>
+
+                        <span>10/03/2022</span>
+                        <p>Resumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo
+                            da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da
+                            notíciaResumo da notícia</p>
+                        <div class="lista__container__noticia__elementos--categoria">
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 1</span>
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 2</span>
+                        </div>
+                    </div>
+
+
+
+
+                </li>
+                <li class="lista__container__noticia">
+                    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="noticia"
+                        class="lista__container__noticia__imagem">
+
+                    <div class="lista__container__noticia__elementos">
+                        <div class="lista__container__noticia__elementos--titulo">
+                            <h2 class="lista__container__noticia__titulo">Titulo</h2>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart hide"></i>
+                        </div>
+
+                        <span>10/03/2022</span>
+                        <p>Resumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo
+                            da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da
+                            notíciaResumo da notícia</p>
+                        <div class="lista__container__noticia__elementos--categoria">
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 1</span>
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 2</span>
+                        </div>
+                    </div>
+
+
+
+
+                </li>
+                <li class="lista__container__noticia">
+                    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="noticia"
+                        class="lista__container__noticia__imagem">
+
+                    <div class="lista__container__noticia__elementos">
+                        <div class="lista__container__noticia__elementos--titulo">
+                            <h2 class="lista__container__noticia__titulo">Titulo</h2>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart hide"></i>
+                        </div>
+
+                        <span>10/03/2022</span>
+                        <p>Resumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo
+                            da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da
+                            notíciaResumo da notícia</p>
+                        <div class="lista__container__noticia__elementos--categoria">
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 1</span>
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 2</span>
+                        </div>
+                    </div>
+
+
+
+
+                </li>
+                <li class="lista__container__noticia">
+                    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="noticia"
+                        class="lista__container__noticia__imagem">
+
+                    <div class="lista__container__noticia__elementos">
+                        <div class="lista__container__noticia__elementos--titulo">
+                            <h2 class="lista__container__noticia__titulo">Titulo</h2>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart hide"></i>
+                        </div>
+
+                        <span>10/03/2022</span>
+                        <p>Resumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo
+                            da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da
+                            notíciaResumo da notícia</p>
+                        <div class="lista__container__noticia__elementos--categoria">
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 1</span>
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 2</span>
+                        </div>
+                    </div>
+
+
+
+
+                </li>
+                <li class="lista__container__noticia">
+                    <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="noticia"
+                        class="lista__container__noticia__imagem">
+
+                    <div class="lista__container__noticia__elementos">
+                        <div class="lista__container__noticia__elementos--titulo">
+                            <h2 class="lista__container__noticia__titulo">Titulo</h2>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart hide"></i>
+                        </div>
+
+                        <span>10/03/2022</span>
+                        <p>Resumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo
+                            da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da notíciaResumo da
+                            notíciaResumo da notícia</p>
+                        <div class="lista__container__noticia__elementos--categoria">
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 1</span>
+                            <i class="fa-solid fa-tag"></i>
+                            <span>Categoria 2</span>
+                        </div>
+                    </div>
+
+
+
+
+                </li>
+                
+
+            </ul>
+        </div>
+    </main>
 </body>
