Basic Structure HTML and CSS pagination

--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -11,5 +11,12 @@
     <script src="https://kit.fontawesome.com/c697d3b3f5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <footer>
+        <div class="paginacao">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>4</span>
+        </div>
+    </footer>
 </body>
