--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -17,7 +17,8 @@
             <ul class="lista__container">
 
             </ul>
-            <script src="./js/api.js"></script>
+            
+            <script src="./js/readData.js" type="module"></script>
         </div>
     </main>
 </body>
