--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -35,11 +35,11 @@
                 <span>Ordernar por:</span>
                 <div>
                     <i class="fa-brands fa-adn"></i>
-                    <a href="">Título</a>
+                    <button data-title>Título</button>
                 </div>
                 <div>
                     <i class="fa-solid fa-calendar-day"></i>
-                    <a href="">Data</a>
+                    <button data-date>Data</button>
                 </div>
                 
             </div>
@@ -54,6 +54,7 @@
             </ul>
             
             <script src="./js/readData.js" type="module"></script>
+            <script src="./js/orderBy.js" type="module"></script>
         </div>
     </main>
 </body>
