--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -27,9 +27,9 @@
         <div class="header__container__blocos">
             
             <div class="blocos__categorias">
-                <a href="" class="categoria">Categoria 1</a>
-                <a href="" class="categoria">Categoria 2</a>
-                <a href="" class="categoria">Categoria 3</a>
+                <button class="categoria">Categoria 1</button>
+                <button class="categoria">Categoria 2</button>
+                <button class="categoria">Categoria 3</button>
             </div>
             <div class="blocos__ordenacao">
                 <span>Ordernar por:</span>
