Creating Local Cache

--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -52,7 +52,7 @@
             <ul class="lista__container">
 
             </ul>
-            
+            <script src="./js/cache.js" type="module"></script>
             <script src="./js/readData.js" type="module"></script>
             <script src="./js/orderBy.js" type="module"></script>
         </div>
