Creating category functions

--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -26,10 +26,10 @@
 
         <div class="header__container__blocos">
             
-            <div class="blocos__categorias">
-                <button class="categoria">Categoria 1</button>
+            <div class="blocos__categorias" data-categorias>
+                <!-- <button class="categoria">Categoria 1</button>
                 <button class="categoria">Categoria 2</button>
-                <button class="categoria">Categoria 3</button>
+                <button class="categoria">Categoria 3</button> -->
             </div>
             <div class="blocos__ordenacao">
                 <span>Ordernar por:</span>
@@ -52,6 +52,7 @@
             <ul class="lista__container">
 
             </ul>
+            <script src="./js/category.js" type="module"></script>
             <script src="./js/cache.js" type="module"></script>
             <script src="./js/readData.js" type="module"></script>
             <script src="./js/orderBy.js" type="module"></script>
