Creating the pagination Control function

--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -53,17 +53,14 @@
             <ul class="lista__container">
 
             </ul>
-            
+            <script src="./js/pagination.js" type="module"></script>
             <script src="./js/readData.js" type="module"></script>
             <script src="./js/orderBy.js" type="module"></script>
         </div>
     </main>
     <footer>
-        <div class="paginacao">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
+        <div class="paginacao" data-pagination="0">
+            
         </div>
     </footer>
 </body>
