--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -28,9 +28,7 @@
         <div class="header__container__blocos">
             
             <div class="blocos__categorias" data-categorias>
-                <!-- <button class="categoria">Categoria 1</button>
-                <button class="categoria">Categoria 2</button>
-                <button class="categoria">Categoria 3</button> -->
+                
             </div>
             <div class="blocos__ordenacao">
                 <span>Ordernar por:</span>
@@ -59,6 +57,7 @@
             <script src="./js/cache.js" type="module"></script>
             <script src="./js/readData.js" type="module"></script>
             <script src="./js/orderBy.js" type="module"></script>
+            <script src="./js/favorite.js" type="module"></script>
         </div>
     </main>
     <footer>
