Button show favorites

--- a/client/brunoaugusto/index.html
+++ b/client/brunoaugusto/index.html
@@ -40,6 +40,10 @@
                     <i class="fa-solid fa-calendar-day"></i>
                     <button data-date>Data</button>
                 </div>
+                <div>
+                    <i class="fa-solid fa-heart"></i>
+                    <button data-favoritos>Favoritos</button>
+                </div>
                 
             </div>
         </div>
